--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "jest"
+    "test": "jest", 
+    "test:db": "jest tests/db",  
+    "test:validator": "jest tests/validator" 
   },
   "keywords": [],
   "author": "",
