--- a/package.json
+++ b/package.json
@@ -4,17 +4,23 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "jest", 
-    "test:db": "jest tests/db",  
-    "test:validator": "jest tests/validator" 
+    "test": "jest",
+    "test:db": "jest tests/db",
+    "test:validator": "jest tests/validator",
+    "test:services": "jest tests/services",
+    "test:controllers": "jest tests/controllers",
+    "test:http": "jest tests/http"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.1.1",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
-    "pg": "^8.15.6"
+    "jsonwebtoken": "^9.0.2",
+    "pg": "^8.15.6",
+    "supertest": "^7.1.0"
   },
   "devDependencies": {
     "jest": "^29.7.0"
