--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "migrate": "node-pg-migrate up",
+    "migrate:down": "node-pg-migrate down",
     "test": "jest --verbose",
     "test:db": "jest tests/db --verbose",
     "test:validator": "jest tests/validator --verbose",
@@ -24,6 +26,7 @@
     "supertest": "^7.1.0"
   },
   "devDependencies": {
-    "jest": "^29.7.0"
+    "jest": "^29.7.0",
+    "node-pg-migrate": "^7.9.1"
   }
 }
